--- a/index.html
+++ b/index.html
@@ -120,6 +120,94 @@
         </div>
         <div class="slider-dots absolute"></div>
     </header>
+    <section class="container mx-auto py-32 flex">
+        <div class="w-2/6">
+            <div class="mb-24">
+                <h6 class="font-medium mb-2 text-xl">offer</h6>
+                <h2 class="text-6xl font-medium leading-tight">OFF</h2>
+                <h2 class="text-6xl font-medium leading-tight upto">Upto 20%</h2>
+                <h6 class="py-8">For all cosmetics</h6>
+            </div>
+            <div>
+                <ul>
+                    <li class="py-3">
+                        <a class="menu-trigger font-semibold hover:text-orange-300" href="#">New</a>
+                    </li>
+                    <ul class="sub-menu ml-4">
+                        <li class="py-2 pt-5"><a class="hover:text-orange-300" href="#"> Cream</a></li>
+                        <li class="py-2"><a class="hover:text-orange-300" href="#"> Oil</a></li>
+                        <li class="py-2"><a class="hover:text-orange-300" href="#"> Mask</a></li>
+                        <li class="py-2"><a class="hover:text-orange-300" href="#"> Lipstic</a></li>
+                        <li class="py-2"><a class="hover:text-orange-300" href="#"> Spray</a></li>
+
+                    </ul>
+                    <li class="py-3">
+                        <a class="menu-trigger font-semibold hover:text-orange-300" href="#">For Body</a>
+                    </li>
+                    <ul class="sub-menu ml-4">
+                        <li class="py-2 pt-5"><a class="hover:text-orange-300" href="#"> Cream</a></li>
+                        <li class="py-2"><a class="hover:text-orange-300" href="#"> Oil</a></li>
+                        <li class="py-2"><a class="hover:text-orange-300" href="#"> Mask</a></li>
+                        <li class="py-2"><a class="hover:text-orange-300" href="#"> Lipstic</a></li>
+                        <li class="py-2"><a class="hover:text-orange-300" href="#"> Spray</a></li>
+
+                    </ul>
+                    <li class="py-3">
+                        <a class="menu-trigger font-semibold hover:text-orange-300" href="#">For Hair</a>
+                    </li>
+                    <ul class="sub-menu ml-4">
+                        <li class="py-2 pt-5"><a class=" The Apollo 13 " href="#"> Cream</a></li>
+                        <li class="py-2"><a class="hover:text-orange-300" href="#"> Oil</a></li>
+                        <li class="py-2"><a class="hover:text-orange-300" href="#"> Mask</a></li>
+                        <li class="py-2"><a class="hover:text-orange-300" href="#"> Lipstic</a></li>
+                        <li class="py-2"><a class="hover:text-orange-300" href="#"> Spray</a></li>
+
+                    </ul>
+                    <li class="py-3">
+                        <a class="menu-trigger font-semibold hover:text-orange-300" href="#">Make Up</a>
+                    </li>
+                    <ul class="sub-menu ml-4">
+                        <li class="py-2 pt-5"><a class=" The Apollo 13 " href="#"> Cream</a></li>
+                        <li class="py-2"><a class="hover:text-orange-300" href="#"> Oil</a></li>
+                        <li class="py-2"><a class="hover:text-orange-300" href="#"> Mask</a></li>
+                        <li class="py-2"><a class="hover:text-orange-300" href="#"> Lipstic</a></li>
+                        <li class="py-2"><a class="hover:text-orange-300" href="#"> Spray</a></li>
+
+                    </ul>
+                    <li class="py-3">
+                        <a class="menu-trigger font-semibold hover:text-orange-300" href="#">Perfumes</a>
+                    </li>
+                    <ul class="sub-menu ml-4">
+                        <li class="py-2 pt-5"><a class=" The Apollo 13 " href="#"> Cream</a></li>
+                        <li class="py-2"><a class="hover:text-orange-300" href="#"> Oil</a></li>
+                        <li class="py-2"><a class="hover:text-orange-300" href="#"> Mask</a></li>
+                        <li class="py-2"><a class="hover:text-orange-300" href="#"> Lipstic</a></li>
+                        <li class="py-2"><a class="hover:text-orange-300" href="#"> Spray</a></li>
+
+                    </ul>
+                </ul>
+            </div>
+        </div>
+        <div class="w-4/6 flex ">
+            <div class="w-1/2 mr-6">
+                <div class="bg-green-300 mb-3 box-1 w-2/3 ml-auto"><img src="./images/cosmetics-two-bottles.png" alt="">
+                </div>
+                <div class="bg-gray-100 mb-3 w-full box-2 pt-32"><img src="./images/cosmetics-yellow-jar.png" alt="">
+                </div>
+                <div class="bg-pink-100 mb-3 w-2/3 box-3 ml-auto h-64"><img src="./images/cosmetic-cream.png" alt="">
+                </div>
+
+            </div>
+            <div class="w-1/2">
+                <div class="bg-gray-200 mb-3 box-4 w-2/3"><img src="./images/Cosmetics.png" alt=""></div>
+                <div class="bg-orange-100 mb-3 box-5 w-full"><img src="./images/cosmetics-bottles.png" alt=""></div>
+                <div class="bg-blue-300 mb-3 box-6 w-2/3 pt-12 pr-8"><img src="./images/cosmetics-jar.png" alt=""></div>
+
+            </div>
+
+
+        </div>
+    </section>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
