--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                 </div>
 
             </div>
-            <div class="w-1/2">
+            <div class="w-1/2 ">
                 <div class="bg-gray-200 mb-3 box-4 w-2/3"><img src="./images/Cosmetics.png" alt=""></div>
                 <div class="bg-orange-100 mb-3 box-5 w-full"><img src="./images/cosmetics-bottles.png" alt=""></div>
                 <div class="bg-blue-300 mb-3 box-6 w-2/3 pt-12 pr-8"><img src="./images/cosmetics-jar.png" alt=""></div>
@@ -208,6 +208,170 @@
 
         </div>
     </section>
+    <section class="flex w-11/12 ml-auto">
+        <div class="bg-orange-200 w-2/5 p-24">
+            <div class="w-64">
+                <h4 class="text-white font-medium text-3xl">Special</h4>
+                <h3 class="text-white font-medium text-6xl leading-tight border-b-4 border-white pb-4">offer</h3>
+                <p class="tet-white py4">Subscribe to mail list <br>and get 15% off on first order </p>
+            </div>
+            <div class="mt-16">
+                <form action="">
+                    <div class="mb-4">
+                        <input
+                            class="bg-orange-300 text-white  text-sm placeholder-white w-full p-4 outline-none focus:bg-orange-400"
+                            type="text" name="Name" placeholder="Name">
+                    </div>
+                    <div class="mb-4">
+                        <input
+                            class="bg-orange-300 text-white  text-sm placeholder-white w-full p-4 outline-none focus:bg-orange-400"
+                            type="email" name="email" placeholder="Email">
+                    </div>
+                    <div>
+                        <button
+                            class="bg-black-400 text-white w-full p-4 uppercase text-sm tracking-wide hover:bg-black-200 focus:outline-none"
+                            type="submit">Subscribe now</button>
+                    </div>
+                    <div class="flex items-center">
+                        <div>
+                            <input type="checkbox" id="check" class="agree_checkbox" checked>
+                            <label for="check"></label>
+                        </div>
+                        <div class="ml-3 text-ehite text-sm font-thin">
+                            by clicking subscribe, you agree to our terms <br> and <a href="#"
+                                class="text-yellow-100 hover:text-black-200">Privacy policy</a>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <div class="w-3/5">
+            <img src="./images/cosmetics-tools.png" alt="">
+        </div>
+    </section>
+    <section class="container mx-auto py-48 flex">
+        <div class="w-2/5">
+            <div class="w-64 text-black-100">
+                <h4 class=" font-medium text-3xl">Blog</h4>
+                <h3 class=" font-medium text-6xl leading-tight border-b-4 border-orange-200 pb-4">Popular</h3>
+                <p class="tet-white py4">Article about indian cosmetic market. Must Read article</p>
+            </div>
+            <div class="mt-16">
+                <button
+                    class="bg-orange-300 text-white w-1/2 uppercase flex items-center justify-between hover:bg-orange-300 p-8">
+                    <span>Read all articles</span>
+                    <img src="./images/arrow-right.svg" alt="">
+                </button>
+
+            </div>
+        </div>
+        <div class="w-3/5 flex items-center p-16">
+            <div class="w-4/6">
+                <img src="./images/cosmetics-lady.png" alt="">
+            </div>
+            <div class="w-2/6">
+                <h1 class="text-3xl leading-normal font-semibold text-black-100">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                </h1>
+                <div class="w-16 h-px bg-orange-200 my-8"></div>
+                <p class="text-black-300 text-sm leading-loose">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Earum autem
+                    molestias! Ipsam ipsum optio corporis deleniti reiciendis?</p>
+
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="slider2">
+            <div class="slide">
+                <div class="inner_box">
+                    <div class="bg-gray-100 relative">
+                        <div class="label bg-white absolute top-0 right-0 text-xl text-black-200 py-8 px-48">New</div>
+                        <img src="./images/cosmetics-yellow-jar.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="inner_box">
+                    <div class="bg-gray-100 relative">
+                        <div class="label bg-white absolute top-0 right-0 text-xl text-black-200 py-8 px-48">New</div>
+                        <img src="./images/cosmetics-yellow-jar.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="inner_box ">
+                    <div class="bg-gray-100 relative">
+                        <div class="label bg-white absolute top-0 right-0 text-xl text-black-200 py-8 px-48">New</div>
+                        <img src="./images/cosmetics-yellow-jar.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="inner_box">
+                    <div class="bg-gray-100 relative">
+                        <div class="label bg-white absolute top-0 right-0 text-xl text-black-200 py-8 px-48">New</div>
+                        <img src="./images/cosmetics-yellow-jar.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="c"></div>
+    </section>
+
+    <footer class="container mx-auto">
+        <section class="flex justify-between">
+            <div class="flex-1">
+                <h1 class="font-bold mb-8">Useful links</h1>
+                <div class="flex">
+                    <div class="flex flex-col w-1/2">
+                        <a class="mb-3 text-sm text-black-100 hover:text-orange-200" href="#"> Catalogue</a>
+                        <a class="mb-3 text-sm text-black-100 hover:text-orange-200" href="#">Payment</a>
+                        <a class="mb-3 text-sm text-black-100 hover:text-orange-200" href="#">Shipping</a>
+                        <a class="mb-3 text-sm text-black-100 hover:text-orange-200" href="#">Feature</a>
+                    </div>
+                    <div class="flex flex-col w-1/2">
+                        <a class="mb-3 text-sm text-black-100 hover:text-orange-200" href="#">Blog</a>
+                        <a class="mb-3 text-sm text-black-100 hover:text-orange-200" href="#">Privacy policy</a>
+                        <a class="mb-3 text-sm text-black-100 hover:text-orange-200" href="#">Contact</a>
+                    </div>
+                </div>
+            </div>
+            <div class="flex-1">
+                <h1 class="font-bold mb-8">Contacts</h1>
+                <div class="flex">
+                    <div>
+                        <h2 class="font-bold text-sm">Panvel</h2>
+                        <span class="text-sm text-black-100">Kherane Raigad India </span>
+
+                    </div>
+                    <div class="ml-8">
+                        <h2 class="font-bold text-sm">Panvel</h2>
+                        <span class=" text-sm text-black-100">Devichapada Raigad India </span>
+                    </div>
+                </div>
+            </div>
+            <div class="flex-1">
+                <h1 class="font-bold mb-8">Register</h1>
+                <form action="" class="flex flex-col">
+                    <input class="border mb-6 border-orange-200 placeholder-black-200 p-2 tet-sm rounded outline-none"
+                        type="text" placeholder="Name">
+                    <input class="border mb-6 border-orange-200 placeholder-black-200 p-2 tet-sm rounded outline-none"
+                        type="email" placeholder="Email">
+                    <button class="bg-orange-200 p-2 text-white rounded hover:bg-orange-400 uppercase">Register
+                        Now</button>
+                </form>
+            </div>
+        </section>
+        <section class="border-t border-gray-100 py-6 flex justify-between items-center mt-16">
+            <div class="tet-xs text-black-100">&#169;2021 SanketGondhali. All right reserved</div>
+            <div class="flex items-center">
+                <a class="ml-12" href=""><img src="./images/facebook.svg" alt=""></a>
+                <a class="ml-12" href=""><img src="./images/twitter.svg" alt=""></a>
+                <a class="ml-12" href=""><img src="./images/instagram.svg" alt=""></a>
+            </div>
+        </section>
+    </footer>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
